HTTP/0.9 Shoutcast stopped working in v76.0b1
Categories
(Core :: Networking: HTTP, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox74 | --- | unaffected |
firefox75 | --- | unaffected |
firefox76 | + | verified |
firefox77 | + | verified |
People
(Reporter: koen, Assigned: dragana)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression, Whiteboard: [necko-triaged])
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:76.0) Gecko/20100101 Firefox/76.0
Steps to reproduce:
Open Welle1 (http://live.welle1.at:8128/;), KissFM Moldova (http://89.28.66.205:8000/;) or any other Shoutcast v1 radio station, or embed them using an <audio> tag.
Actual results:
It shows the binary content and headers as plain text. instead of as audio stream.
Expected results:
Show the live audio stream as was the case with 75. It seems to me this is caused by Shoutcast v1's usage of HTTP/0.9 headers. It looks like Firefox 76 changed the way it reacts to the ICY response. Google Chrome 55 exhibited a similar issue. Unfortunately many (large) radio stations still use Shoutcast v1, even though it is more than 10 years old.
Just to be clear: The ; at the end of the URL is part of the URL. Without it it shows the Shoutcast status page for that station.
Comment 2•5 years ago
|
||
thank you for the bug report & the clear steps to reproduce.
Updated•5 years ago
|
Comment 3•5 years ago
|
||
Hello Koen,
Could you help us to find the regression range by mozregresson?
https://mozilla.github.io/mozregression/quickstart.html
Thanks.
Comment 4•5 years ago
|
||
i already did that :-) - it regressed with bug 1623755
Comment 5•5 years ago
|
||
(In reply to [:philipp] from comment #4)
i already did that :-) - it regressed with bug 1623755
Oops I miss the tag :) Thanks!
Comment 6•5 years ago
|
||
Could you take a look given it's regressed by bug 1623755, dragana?
Comment 7•5 years ago
|
||
Is there any reason we can't/shouldn't back out bug 1623755 from Beta for now to resolve this for 76?
Assignee | ||
Comment 8•5 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM] from comment #7)
Is there any reason we can't/shouldn't back out bug 1623755 from Beta for now to resolve this for 76?
This will be an easy fix, probably a line of code. Considering that Beta is just starting would it be a problem to uplift a fix in next day or 2?
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 9•5 years ago
|
||
Comment 10•5 years ago
|
||
Comment 11•5 years ago
|
||
bugherder |
Assignee | ||
Comment 12•5 years ago
|
||
Comment on attachment 9139299 [details]
Bug 1628008 - Tokenizer cannot compare whitespace well. r=mayhemer
Beta/Release Uplift Approval Request
- User impact if declined: Shoutcast is not working
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): It is an one-line change that change how a string is compared. CheckWord from Tokenized does not handle white space well.
- String changes made/needed: none
Updated•5 years ago
|
Comment 13•5 years ago
|
||
Comment on attachment 9139299 [details]
Bug 1628008 - Tokenizer cannot compare whitespace well. r=mayhemer
Approved for 76.0b4. Let's try to get this verified ASAP too.
Comment 14•5 years ago
|
||
bugherder uplift |
Updated•5 years ago
|
Comment 15•5 years ago
|
||
Reproduced the initial issue in Beta version 76.0b3 (build id: 20200409223136) on Windows 10.
Verified - Fixed in latest Nightly 77.0a1 (build id: 20200412214115) and Beta 76.0b4 (build id: 20200412214314) using Windows 10 and Ubuntu 18.04. Audio stream is displayed and works properly using both examples from the description.
Description
•