Bug 1628008 - Tokenizer cannot compare whitespace well. r=mayhemer

Differential Revision: https://phabricator.services.mozilla.com/D70255

--HG--
extra : moz-landing-system : lando