netwerk/protocol/http/nsHttpResponseHead.cpp
@@ -1081,7 +1081,7 @@ void nsHttpResponseHead::ParseVersion(const char* str) {
   Tokenizer t(str, nullptr, "");
   // make sure we have HTTP at the beginning
   if (!t.CheckWord("HTTP")) {
-    if (t.CheckWord("ICY ")) {
+    if (PL_strncasecmp(str, "ICY ", 4) == 0) {
       // ShoutCast ICY is HTTP/1.0-like. Assume it is HTTP/1.0.
       LOG(("Treating ICY as HTTP 1.0\n"));
       mVersion = HttpVersion::v1_0;
